vue3-movie-app/tests/example.test.js
import { mount } from '@vue/test-utils'
// import Example from './Parent.vue'
// TypeError: Cannot destructure property 'config' of 'undefined' as it is undefined.

test('메세지를 변경합니다.', () => {
    // expect('1').toBe('1')
    // const wrapper = mount(Example)
    // wrapper.vm === this
    // expect(wrapper.vm.msg).toBe('Hello Vue test utils!')
})